--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
+cachetools==5.5.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 coverage==7.6.1
 exceptiongroup==1.2.2
+google-analytics-data==0.18.11
+google-api-core==2.19.2
+google-auth==2.34.0
+googleapis-common-protos==1.65.0
+grpcio==1.66.0
+grpcio-status==1.66.0
+idna==3.8
 iniconfig==2.0.0
 packaging==24.1
 pluggy==1.5.0
+proto-plus==1.24.0
+protobuf==5.27.4
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pytest==8.3.2
 pytest-cov==5.0.0
+requests==2.32.3
+rsa==4.9
 tomli==2.0.1
+urllib3==2.2.2
